Removed contact info
Removed direct contact info and added LinkedIn contact tab

--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li class="active"><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
+                    <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/sattanaathan-thayumanan/"><i class="icon-envelope icon-white"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -53,10 +53,14 @@
             </div>
             <div class="span9">
                 <div class="page-header">
-					<h1>Education<small> MS & B.Tech.</small></h1>
-				</div>
+                    <h1>Education<small> MS & B.Tech.</small></h1>
+                </div>
                 <section id="ufl">
-                    <h3><a href="https://www.ece.ufl.edu/" target="_blank"><p style="text-decoration:none">University of Florida, Gainesville</p></a></h3>
+                    <h3>
+                        <a href="https://www.ece.ufl.edu/" target="_blank">
+                            <p style="text-decoration:none">University of Florida, Gainesville</p>
+                        </a>
+                    </h3>
                     <h5>Master of Science, Electrical and Computer Engineering (Fall 2018 - Fall 2019)</h5>
                     <table class="table table-bordered table-hover">
                         <tr>
@@ -89,7 +93,7 @@
                         <tr>
                             <td>Engineering Leadership</td>
                             <td>
-                            <td>
+                                <td>
                         </tr>
                     </table>
                 </section>
