--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
+                    <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/sattanaathan-thayumanan/"><i class="icon-envelope icon-white"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -88,40 +88,8 @@
                     </div>
                     <div class="span3">
                         <!-- <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br> -->
-                        <img src="bootstrap/img/LinkedIn_DP.jpg" class="img-rounded" /><br>
+                        <br><br><img src="bootstrap/img/LinkedIn_DP.jpg" class="img-rounded" /><br>
                         <!-- <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p> -->
-                        <br>
-
-                        <div>
-                            <h4>Resume</h4>
-                            <table class="table table-bordered table-hover">
-
-                                <tr>
-                                    <td>Online version</td>
-                                    <td><a href="resume.html"><i class="icon-list-alt"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>Offline version</td>
-                                    <td><a href="files/Sattanaathan_Thayumanan_Resume.docx" download>Download</a></object>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-
-                        <div>
-                            <!-- <h5>Contact</h5> -->
-                            <h4>Contact</h4>
-                            <table class="table table-bordered table-hover">
-                                <tr>
-                                    <td><a href="mailto:vtsnaathan@gmail.com" target="_blank">vtsnaathan@gmail.com</a></td>
-                                    <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>+1 (352) 284 9712</td>
-                                    <td><i class="icon-signal"></i></td>
-                                </tr>
-                            </table>
-                        </div>
                     </div>
                 </div>
             </div>
