--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li class="active"><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
+                    <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/sattanaathan-thayumanan/"><i class="icon-envelope icon-white"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
