Updated class of
updated graduation class of

--- a/courses.html
+++ b/courses.html
@@ -99,7 +99,7 @@
                 </section>
                 <section id="nitt">
                     <h3><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></h3>
-                    <h5>Bachelor of Technology, Electrical and Electronics Engineering (Aug 2012 - May 2016)</h5>
+                    <h5>Bachelor of Technology, Electrical and Electronics Engineering (Fall 2012 - Spring 2016)</h5>
                     <table class="table table-bordered table-hover">
                         <tr>
                             <th>Cumulative Grade Point Average</th>
