--- a/resume.html
+++ b/resume.html
@@ -299,28 +299,6 @@
                             <td>Linux | Windows</td>
                         </tr>
                     </table>
-
-                    <!-- <table class="table table-bordered table-hover">
-                        <tr>
-                            <th>Languages</th>
-                            <td>Embedded C, JAVA, C, C++, Python, <a href="https://elixir-lang.org/" target="_blank">Elixir</a>, <a href="http://www.plcdev.com/book/export/html/9" target="_blank">PLC</a>, <a href="http://www.mathworks.in/products/matlab/"
-                                    target="_blank">MATLAB</a>, C#, <a href="https://www.lua.org/" target="_blank">Lua</a>, Visual Basics (VBA)</td>
-                        </tr>
-                        <tr>
-                            <th>Electronics</th>
-                            <td>AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc" target="_blank">Arduino</a>,
-                                <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/" target="_blank">Papilio FPGA (Papilio One 500K board)</a></td>
-                        </tr>
-                        <tr>
-                            <th>Software development</th>
-                            <td> <a href="https://developer.android.com/studio/" target="_blank">Android Studio</a>, <a href="https://visualstudio.microsoft.com/" target="_blank">Visual Studio</a>, <a href="https://www.3ds.com/products-services/catia/products/controlbuild/"
-                                    target="_blank">ControlBuild</a>, <a href="http://www.ni.com/en-sg/shop/labview/labview-details.html" target="_blank">NI LabVIEW</a>, <a href="https://www.embarcadero.com/products/delphi/" target="_blank">Delphi</a></td>
-                        </tr>
-                        <tr>
-                            <th>Operating Systems</th>
-                            <td>Linux and Windows</td>
-                        </tr>
-                    </table> -->
                 </section>
                 <hr class="separator" />
                 <section id="education">
@@ -331,7 +309,7 @@
                             <th>Major</th>
                             <th>University / Institution</th>
                             <th>CGPA</th>
-                            <th>Month & Year of Completion</th>
+                            <th>Class of</th>
                         </tr>
                         <tr>
                             <td>Master of Science (MS)</td>
@@ -342,7 +320,7 @@
                                 </a>
                             </td>
                             <td>3.7/4</td>
-                            <td>December 2019</td>
+                            <td>Fall 2019</td>
                         </tr>
 
                         <tr>
@@ -350,7 +328,7 @@
                             <td>Electrical and Electronics</td>
                             <td><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></td>
                             <td>7.20/10 <br></td>
-                            <td>May 2016</td>
+                            <td>Spring 2016</td>
                         </tr>
                     </table>
                 </section>
