--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                 </div>
                 <section id="work">
                     <h3>Work Experience</h3>
-                    <h5>Systems Engineer at <a href="https://www.qualcomm.com/" target="_blank">Qualcomm</a> (Jan 2020 - Present)
+                    <h5>Systems Engineer at <a href="https://www.qualcomm.com/" target="_blank">Qualcomm</a> (Jan 2020 - Apr 2023)
                     </h5>
                     <ul></ul>
                     <h7>My role as an Automotive Safety Systems Engineer is to understand the functional safety expectations of a System-in-Package (SiP) and System-on-Chip (SoC). I coordinate with vendors and IP teams that make up the SoC and SiP to achieve
